<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage"
    android:orientation="horizontal"
    android:background="@drawable/flowerback">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="148dp"
                android:layout_gravity="left"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:src="@drawable/flow2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_weight="3"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="147dp"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:src="@drawable/flow1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_regualr"
                android:gravity="center"
                android:text="@string/welcomeback"
                android:textSize="30dp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/enterenamil" />

            <EditText
                android:id="@+id/enteremail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text=""
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/enterpassword" />

            <EditText
                android:id="@+id/enterpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:text=""
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/forgotpassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rememberme" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regualr"
                android:text="@string/loginbtn" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/noaccount" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signuplink"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signuppagelink" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adminlogin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/adminlogin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/flow3" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>