<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupPage"
    android:orientation="horizontal"
    android:background="@drawable/flowerback"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="148dp"
                android:layout_gravity="left"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:src="@drawable/flow2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_weight="3"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="147dp"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:src="@drawable/flow1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/montserrat_regualr"
                android:text="@string/createaccount"
                android:textSize="30dp"
                android:textStyle="bold" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/enterusername"/>

            <EditText
                android:id="@+id/enterusername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:inputType="textNoSuggestions"
                android:textSize="15dp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/enternamee"/>

            <EditText
                android:id="@+id/entername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="50dp"
                android:ems="10"
                android:inputType="textNoSuggestions"
                android:textSize="15dp"
                android:text=""/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="Enter Phone"/>

            <EditText
                android:id="@+id/enterphone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="50dp"
                android:textSize="15dp"
                android:inputType="phone"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/enteraddress"/>

            <EditText
                android:id="@+id/enteraddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="50dp"
                android:textSize="15dp"
                android:inputType="textPostalAddress"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/enterenamil"/>

            <EditText
                android:id="@+id/enteremail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="50dp"
                android:textSize="15dp"
                android:inputType="textEmailAddress"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/enterpassword"/>

            <EditText
                android:id="@+id/enterpassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="50dp"
                android:textSize="15dp"
                android:inputType="textPassword"
                android:text="" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="50px">
            <Button
                android:id="@+id/signinbutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signinbtn"
                android:fontFamily="@font/montserrat_regualr"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="0dp">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orsign"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginlinkbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_regualr"
                android:text="@string/loginbtn" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/flow3" />
        </LinearLayout>


        </LinearLayout>
</ScrollView >